<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnPrimary"
    android:scrollbars="none"
    tools:context=".view.DetailActivity"
    tools:ignore="Overdraw">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="36dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:minHeight="?android:attr/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/mbold"
                android:textAllCaps="true"
                android:textColor="?attr/colorOnSecondary"
                android:textSize="20sp"
                tools:text="name" />

        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <co.mobiwise.library.InteractivePlayerView
                android:id="@+id/ipv"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                app:emptyColor="#aaffffff"
                app:loadedColor="@color/light_yellow" />

            <ImageButton
                android:id="@+id/ib_play"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:background="@drawable/ic_play"
                android:contentDescription="@string/todo"
                android:scaleType="fitCenter" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:background="@drawable/bg_detail_title">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="28dp"
                    android:layout_marginEnd="28dp"
                    android:fontFamily="@font/mmedium"
                    android:text="@string/title_scientific_classification"
                    android:textColor="?attr/colorOnSecondary"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_detail_content"
                android:orientation="vertical"
                android:padding="28dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp">


                    <TextView
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/mmedium"
                        android:text="@string/title_kingdom"
                        android:textColor="?attr/colorOnSecondary"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="16dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/mmedium"
                        android:text="@string/colon"
                        android:textColor="?attr/colorOnSecondary"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tv_kingdom"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/mmedium"
                        android:textColor="?attr/colorOnSecondary"
                        android:textSize="14sp"
                        tools:text="Kingdom Value" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp">

                    <TextView
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/mmedium"
                        android:text="@string/title_phylum"
                        android:textColor="?attr/colorOnSecondary"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="16dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/mmedium"
                        android:text="@string/colon"
                        android:textColor="?attr/colorOnSecondary"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tv_phylum"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/mmedium"
                        android:textColor="?attr/colorOnSecondary"
                        android:textSize="14sp"
                        tools:text="Phylum Value" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp">

                    <TextView
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/mmedium"
                        android:text="@string/title_class"
                        android:textColor="?attr/colorOnSecondary"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="16dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/mmedium"
                        android:text="@string/colon"
                        android:textColor="?attr/colorOnSecondary"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tv_class"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/mmedium"
                        android:textColor="?attr/colorOnSecondary"
                        android:textSize="14sp"
                        tools:text="Class Value" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp">

                    <TextView
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/mmedium"
                        android:text="@string/title_order"
                        android:textColor="?attr/colorOnSecondary"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="16dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/mmedium"
                        android:text="@string/colon"
                        android:textColor="?attr/colorOnSecondary"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tv_order"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/mmedium"
                        android:textColor="?attr/colorOnSecondary"
                        android:textSize="14sp"
                        tools:text="Order Value" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp">

                    <TextView
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/mmedium"
                        android:text="@string/title_family"
                        android:textColor="?attr/colorOnSecondary"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="16dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/mmedium"
                        android:text="@string/colon"
                        android:textColor="?attr/colorOnSecondary"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tv_family"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/mmedium"
                        android:textColor="?attr/colorOnSecondary"
                        android:textSize="14sp"
                        tools:text="Family Value" />
                </LinearLayout>
            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:background="@drawable/bg_detail_title">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="28dp"
                    android:layout_marginEnd="28dp"
                    android:fontFamily="@font/mmedium"
                    android:text="@string/title_desc"
                    android:textColor="?attr/colorOnSecondary"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_detail_content"
                android:padding="28dp">

                <TextView
                    android:id="@+id/tv_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mmedium"
                    android:textColor="?attr/colorOnSecondary"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/rooster_desc" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:fontFamily="@font/mregular"
                android:text="@string/text_more_information"
                android:textAlignment="center"
                android:textColor="?attr/colorOnSecondary"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_web"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/bg_btn"
                android:fontFamily="@font/mbold"
                android:text="@string/title_web"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="16sp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>